--- a/index.html
+++ b/index.html
@@ -206,7 +206,26 @@ Contact on WhatsApp
 </div>
 
 <footer>
-© 2025 Dhayareshwar Labs. All rights reserved.
+<footer style="
+background:#222;
+color:#fff;
+text-align:center;
+padding:15px;
+font-size:14px;
+">
+  <a href="privacy-policy.html" style="color:#ccc;margin-right:15px;">
+    Privacy Policy
+  </a>
+  |
+  <a href="terms-and-conditions.html" style="color:#ccc;margin-left:15px;">
+    Terms & Conditions
+  </a>
+
+  <p style="margin-top:10px;">
+    © 2025 Dhayareshwar Labs. All rights reserved.
+  </p>
+</footer>
+
 </footer>
 <!-- Cookie Consent Banner -->
 <div id="cookieConsent" style="
