--- a/index.html
+++ b/index.html
@@ -241,10 +241,9 @@ font-size:14px;
 z-index:9999;
 display:none;
 ">
-  We use cookies to improve your experience and analyze website traffic.
-  <a href="https://dhayareshwarlabs.online/privacy-policy/">
- style="color:#4da6ff;text-decoration:underline;">
-    Privacy Policy
+  We use cookies to improve your experience.
+<a href="privacy-policy.html" style="color:#4da6ff; text-decoration:underline;">
+  Privacy 
   </a>
   <button onclick="acceptCookies()" style="
     margin-left:10px;
