--- a/index.html
+++ b/index.html
@@ -187,7 +187,41 @@ Environmental Monitoring • AQI • AQMS • OCEMS Solutions
   <p>Online effluent monitoring for pH, TSS, COD, BOD compliance.</p>
   <div class="price">₹4,00,000+</div>
 </div>
+<!-- Sponsor Message Section -->
+<div style="max-width:900px;margin:40px auto;padding:20px;border-top:1px solid #ddd;">
+  <h3 style="text-align:center;color:#666;">Sponsor Message</h3>
 
+  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:20px;margin-top:20px;">
+
+    <div style="border:1px solid #eee;padding:10px;text-align:center;">
+      <img src="aqi.png" style="width:100%;max-height:140px;object-fit:contain;">
+      <strong>AQI Display System</strong><br>
+      <small>Industrial Grade</small>
+    </div>
+
+    <div style="border:1px solid #eee;padding:10px;text-align:center;">
+      <img src="ocems.png" style="width:100%;max-height:140px;object-fit:contain;">
+      <strong>OCEMS Solution</strong><br>
+      <small>CPCB / MPCB Ready</small>
+    </div>
+
+    <div style="border:1px solid #eee;padding:10px;text-align:center;">
+      <img src="led1.png" style="width:100%;max-height:140px;object-fit:contain;">
+      <strong>LED Display Boards</strong><br>
+      <small>Outdoor & Indoor</small>
+    </div>
+
+    <div style="border:1px solid #eee;padding:10px;text-align:center;">
+      <img src="Logo.jpg" style="width:100%;max-height:140px;object-fit:contain;">
+      <strong>Environmental Services</strong><br>
+      <small>Compliance & Monitoring</small>
+    </div>
+
+  </div>
+
+  <p style="text-align:center;margin-top:15px;font-size:13px;color:#888;">
+    Sponsored by <strong>Dhayareshwar Labs</strong>
+  </p>
 </div>
 </div>
 
