--- a/live-data.html
+++ b/live-data.html
@@ -71,10 +71,8 @@ setInterval(loadData,10000);
 loadData();
 </script>
 <footer>
-© 2025 Dhayareshwar Labs. All rights reserved.
-</footer>
-
-</div>
+  <h2 style="color:red;text-align:center;">SPONSOR SECTION TEST</h2>
+  
   <!-- Sponsor Message Section -->
 <div style="max-width:900px;margin:40px auto;padding:20px;border-top:1px solid #ddd;">
   <h3 style="text-align:center;color:#666;">Sponsor Message</h3>
@@ -110,6 +108,10 @@ loadData();
   <p style="text-align:center;margin-top:15px;font-size:13px;color:#888;">
     Sponsored by <strong>Dhayareshwar Labs</strong>
   </p>
+</div>
+
+© 2025 Dhayareshwar Labs. All rights reserved.
+</footer>
 </div>
 
 </body>
