--- a/live-data.html
+++ b/live-data.html
@@ -71,7 +71,7 @@ setInterval(loadData,10000);
 loadData();
 </script>
 <footer>
-  <h2 style="color:red;text-align:center;">SPONSOR SECTION TEST</h2>
+  <h2 style="color:red;text-align:center;">SPONSOR BY LABORATORIES 🌐</h2>
   
   <!-- Sponsor Message Section -->
 <div style="max-width:900px;margin:40px auto;padding:20px;border-top:1px solid #ddd;">
@@ -110,7 +110,7 @@ loadData();
   </p>
 </div>
 
-© 2025 Dhayareshwar Labs. All rights reserved.
+  © 2025 Dhayareshwar Labs. All rights reserved.
 </footer>
 </div>
 
