--- a/live-data.html
+++ b/live-data.html
@@ -73,41 +73,108 @@ loadData();
 <footer>
   <h2 style="color:red;text-align:center;">SPONSOR BY LABORATORIES 🌐</h2>
   
-  <!-- Sponsor Message Section -->
-<div style="max-width:900px;margin:40px auto;padding:20px;border-top:1px solid #ddd;">
-  <h3 style="text-align:center;color:#666;">Sponsor Message</h3>
+  <style>
+/* ===== Sponsor Slider Styles ===== */
+.sponsor-wrapper{
+  max-width: 100%;
+  margin: 40px auto;
+  overflow: hidden;
+  padding: 10px 0;
+}
 
-  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:20px;margin-top:20px;">
+.sponsor-title{
+  text-align:center;
+  color:#666;
+  margin-bottom:15px;
+  font-size:18px;
+  font-weight:600;
+}
 
-    <div style="border:1px solid #eee;padding:10px;text-align:center;">
-      <img src="aqi.png" style="width:100%;max-height:140px;object-fit:contain;">
+.sponsor-slider{
+  display:grid;
+  grid-auto-flow:column;
+  grid-auto-columns:280px;
+  gap:20px;
+  animation: sponsorScroll 25s linear infinite;
+}
+
+.sponsor-slider:hover{
+  animation-play-state: paused;
+}
+
+.sponsor-card{
+  border:1px solid #eee;
+  padding:12px;
+  text-align:center;
+  background:#fff;
+}
+
+.sponsor-card img{
+  width:100%;
+  height:200px;
+  object-fit:contain;
+}
+
+/* Auto scroll animation */
+@keyframes sponsorScroll{
+  from { transform: translateX(0); }
+  to   { transform: translateX(-50%); }
+}
+
+/* Mobile friendly */
+@media(max-width:600px){
+  .sponsor-slider{
+    grid-auto-columns:220px;
+    animation-duration:35s;
+  }
+}
+</style>
+
+<div class="sponsor-wrapper">
+  <div class="sponsor-title">Sponsor Message</div>
+
+  <div class="sponsor-slider">
+
+    <!-- Card 1 -->
+    <div class="sponsor-card">
+      <img src="aqi.png">
       <strong>AQI Display System</strong><br>
       <small>Industrial Grade</small>
     </div>
 
-    <div style="border:1px solid #eee;padding:10px;text-align:center;">
-      <img src="ocems.png" style="width:100%;max-height:140px;object-fit:contain;">
+    <!-- Card 2 -->
+    <div class="sponsor-card">
+      <img src="ocems.png">
       <strong>OCEMS Solution</strong><br>
       <small>CPCB / MPCB Ready</small>
     </div>
 
-    <div style="border:1px solid #eee;padding:10px;text-align:center;">
-      <img src="led1.png" style="width:100%;max-height:140px;object-fit:contain;">
+    <!-- Card 3 -->
+    <div class="sponsor-card">
+      <img src="led1.png">
       <strong>LED Display Boards</strong><br>
       <small>Outdoor & Indoor</small>
     </div>
 
-    <div style="border:1px solid #eee;padding:10px;text-align:center;">
-      <img src="Logo.jpg" style="width:100%;max-height:140px;object-fit:contain;">
+    <!-- Card 4 -->
+    <div class="sponsor-card">
+      <img src="logo.jpg">
       <strong>Environmental Services</strong><br>
       <small>Compliance & Monitoring</small>
     </div>
 
-  </div>
+    <!-- DUPLICATE FOR SMOOTH LOOP -->
+    <div class="sponsor-card">
+      <img src="aqi.png">
+      <strong>AQI Display System</strong><br>
+      <small>Industrial Grade</small>
+    </div>
 
-  <p style="text-align:center;margin-top:15px;font-size:13px;color:#888;">
-    Sponsored by <strong>Dhayareshwar Labs</strong>
-  </p>
+    <div class="sponsor-card">
+      <img src="ocems.png">
+      <strong>OCEMS Solution</strong><br>
+      <small>CPCB / MPCB Ready</small>
+    </div>
 </div>
 
   © 2025 Dhayareshwar Labs. All rights reserved.
