--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Environmental Monitoring • AQI • AQMS • OCEMS Solutions
   <img src="ocems.png" alt="OCEMS System">
   <h3>OCEMS System</h3>
   <p>Online Continuous Emission Monitoring System as per MPCB / CPCB norms.</p>
-  <div class="price">₹3,50,000+</div>
+  <div class="price"> on request </div>
 </div>
 
 <div class="product-card">
@@ -185,7 +185,7 @@ Environmental Monitoring • AQI • AQMS • OCEMS Solutions
   <img src="water.png" alt="Water OCEMS">
   <h3>Water OCEMS</h3>
   <p>Online effluent monitoring for pH, TSS, COD, BOD compliance.</p>
-  <div class="price">₹4,00,000+</div>
+  <div class="price"> on request </div>
 </div>
 <style>
 /* ===== Sponsor Slider Styles ===== */
@@ -209,7 +209,7 @@ Environmental Monitoring • AQI • AQMS • OCEMS Solutions
   grid-auto-flow:column;
   grid-auto-columns:280px;
   gap:20px;
-  animation: sponsorScroll 25s linear infinite;
+  animation: sponsorScroll 15s linear infinite;
 }
 
 .sponsor-slider:hover{
@@ -239,7 +239,7 @@ Environmental Monitoring • AQI • AQMS • OCEMS Solutions
 @media(max-width:600px){
   .sponsor-slider{
     grid-auto-columns:220px;
-    animation-duration:35s;
+    animation-duration:15s;
   }
 }
 </style>
