--- a/products.html
+++ b/products.html
@@ -42,6 +42,19 @@ body{
   border-radius:8px;
   box-shadow:0 0 10px rgba(0,0,0,0.08);
 }
+  .back {
+      text-align: center;
+      margin-top: 25px;
+    }
+
+    .back a {
+      text-decoration: none;
+      color: #ffffff;
+      background: #3498db;
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-weight: bold;
+    }
 
 /* PRODUCTS */
 .product-grid{
