--- a/products.html
+++ b/products.html
@@ -117,7 +117,7 @@ footer{
   <img src="ocems.png">
   <h3>OCEMS System</h3>
   <p>Continuous emission monitoring as per MPCB / CPCB norms.</p>
-  <div class="price">₹3,50,000+</div>
+  <div class="price"> on request</div>
 </div>
 
 <div class="product-card">
@@ -131,9 +131,10 @@ footer{
   <img src="water.png">
   <h3>Water OCEMS</h3>
   <p>Online effluent quality monitoring system.</p>
-  <div class="price">₹4,00,000+</div>
+  <div class="price">on request</div>
 </div>
-
+<div class="back">
+      <a href="index.html">← Back to Home</a>
 </div>
 
 <footer>
