--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,19 @@ button {
 button:hover {
   background: #1a252f;
 }
+  .back {
+      text-align: center;
+      margin-top: 25px;
+    }
+
+    .back a {
+      text-decoration: none;
+      color: #ffffff;
+      background: #3498db;
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-weight: bold;
+    }
 </style>
 </head>
 
