--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,33 @@ body {
   font-family: Arial, sans-serif;
   background: #f4f4f4;
 }
+  /* navbar styles */
+.navbar {
+  background-color: #2c3e50; /* dark blue/gray */
+  padding: 10px 20px;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 20px;
+}
+
+.navbar li {
+  display: inline;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.navbar a:hover {
+  color: #00bfff; /* hover color */
+}
 
 .container {
   max-width: 500px;
