--- a/services.html
+++ b/services.html
@@ -22,6 +22,34 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.08);
     }
 
+    /* navbar styles */
+.navbar {
+  background-color: #2c3e50; /* dark blue/gray */
+  padding: 10px 20px;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 20px;
+}
+
+.navbar li {
+  display: inline;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.navbar a:hover {
+  color: #00bfff; /* hover color */
+}
+
     .logo {
       text-align: center;
       margin-bottom: 15px;
