--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Dhayareshwar Labs – AQMS, AQI Monitoring Systems, OCEMS, Water OCEMS and LED AQI Display solutions as per CPCB & MPCB norms.">
   <meta name="keywords" content="AQMS, AQI Monitoring System, OCEMS, Water OCEMS, LED AQI Display, MPCB CPCB">
+<script>
+  if (/Android|iPhone|iPad|iPod/i.test(navigator.userAgent)) {
+    window.location.href = "/mobile/client-login.html";
+  } else {
+    window.location.href = "/client-login.html";
+  }
+</script>
 
   <style>
     /* ALL CSS ONLY HERE */
