--- a/index.html
+++ b/index.html
@@ -17,9 +17,19 @@
     }
     /* ===== NAVBAR ===== */
 .navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   background: #2c3e50;
   padding: 12px 0;
+  z-index: 1000;
 }
+
+body {
+  margin-top: 60px;
+}
+
 
 .navbar ul {
   list-style: none;
