--- a/services.html
+++ b/services.html
@@ -150,7 +150,7 @@
       <h3>Environmental Compliance Support</h3>
       <p>
         Assistance for Consent to Operate, MPCB compliance,
-        audit preparation and regulatory documentation.
+        audit preparation and regulatory documentation. BRSR (Business Responsibility and Sustainability Reporting) is India's mandatory framework by SEBI for top listed companies, requiring detailed disclosure of Environmental, Social, and Governance (ESG) performance, replacing the older BRR (Business Responsibility Report) to boost transparency and align with global standards for responsible business conduct, covering nine core principles from ethics to environmental impact and stakeholder engagement. It's an integrated report with three sections: general info, management processes, and principle-wise performance, including a 'Core' subset for value chain reporting and assurance. 
       </p>
     </div>
 
