--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Dhayareshwar Labs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Dhayareshwar Labs – AQMS, BRSR, EPR, AQI Monitoring Systems, OCEMS, Water OCEMS and LED AQI Display solutions as per CPCB, SEBI & MPCB norms.">
-  <meta name="keywords" content="AQMS, AQI Monitoring System, OCEMS, Water OCEMS, LED AQI Display, MPCB CPCB">
+  <meta name="keywords" content="AQMS, BRSR, EPR, ESG, AQI Monitoring System, OCEMS, Water OCEMS, LED AQI Display, MPCB CPCB">
 
   <style>
     /* ALL CSS ONLY HERE */
