--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Dhayareshwar Labs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Dhayareshwar Labs – AQMS, BRSR, EPR, AQI Monitoring Systems, OCEMS, Water OCEMS and LED AQI Display solutions as per CPCB, SEBI & MPCB norms.">
-  <meta name="keywords" content="AQMS, BRSR, EPR, ESG, AQI Monitoring System, OCEMS, Water OCEMS, LED AQI Display, MPCB CPCB">
+  <meta name="description" content="Dhayareshwar Labs – AQMS, BRSR, EPR, AQI Monitoring Systems, OCEMS, GHG And ESG solutions as per CPCB, SEBI & MPCB norms.">
+  <meta name="keywords" content="AQMS, BRSR, EPR, ESG, AQI Monitoring System, GHG, LED AQI Display, ETP/STP, MPCB CPCB">
 
   <style>
     /* ALL CSS ONLY HERE */
