--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ footer{
 
 <h1 style="text-align:center;">Dhayareshwar Labs</h1>
 <p style="text-align:center;">
-Environmental Monitoring • AQI • AQMS • OCEMS Solutions
+Environmental Monitoring • AQI • AQMS • BRSR & GHG
 </p>
 
 <!-- PRODUCTS -->
