--- a/navbar.html
+++ b/navbar.html
@@ -1,10 +1,10 @@
 <!-- navbar.html -->
 <nav class="navbar">
   <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="products.html">Products</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a href="login.html">Client Login</a></li>
+    <li><a href="/index.html">Home</a></li>
+    <li><a href="/products.html">Products</a></li>
+    <li><a href="/services.html">Services</a></li>
+    <li><a href="/contact.html">Contact</a></li>
+    <li><a href="/login.html">Client Login</a></li>
   </ul>
 </nav>
