--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ footer{
     <li><a href="/products.html">Products</a></li>
     <li><a href="/services.html">Services</a></li>
     <li><a href="/contact.html">Contact</a></li>
-    <li><a href="/client-report.html">Client Login</a></li>
+    <li><a href="/public/client-report.html">Client Login</a></li>
     <li></li><a href="/live-data.html">Live Data</a></li>
   </ul>
 </div>
