--- a/navbar.html
+++ b/navbar.html
@@ -4,7 +4,7 @@
     <li><a href="/index.html">Home</a></li>
     <li><a href="/products.html">Products</a></li>
     <li><a href="/services.html">Services</a></li>
-    <li><a href="/public/contact.html">Contact</a></li>
+    <li><a href="/contact.html">Contact</a></li>
     <li><a href="/login.html">Client Login</a></li>
   </ul>
 </nav>
