--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@ footer{
 <!-- NAVIGATION -->
 <div class="navbar">
   <ul>
-    <li><a href="/index.html">Home</a></li>
-    <li><a href="/products.html">Products</a></li>
-    <li><a href="/services.html">Services</a></li>
-    <li><a href="/contact.html">Contact</a></li>
+    <li><a href="/public/index.html">Home</a></li>
+    <li><a href="/public/products.html">Products</a></li>
+    <li><a href="/public/services.html">Services</a></li>
+    <li><a href="/public/contact.html">Contact</a></li>
     <li><a href="/public/client-report.html">Client Login</a></li>
     <li></li><a href="/live-data.html">Live Data</a></li>
   </ul>
