--- a/navbar.html
+++ b/navbar.html
@@ -42,12 +42,12 @@
 <div class="navbar">
   <span class="menu-btn" onclick="toggleMenu()">☰ Menu</span>
   <ul class="nav-links" id="navLinks">
-    <li><a href="/public/index.html">Home</a></li>
-    <li><a href="/public/products.html">Products</a></li>
-    <li><a href="/public/services.html">Services</a></li>
-    <li><a href="/public/contact.html">Contact</a></li>
-    <li><a href="/public/client-report.html">Client Login</a></li>
-    <li><a href="/public/live-data.html">Live Data</a></li>
+    <li><a href="/index.html">Home</a></li>
+    <li><a href="/products.html">Products</a></li>
+    <li><a href="/services.html">Services</a></li>
+    <li><a href="/contact.html">Contact</a></li>
+    <li><a href="/client-report.html">Client Login</a></li>
+    <li><a href="/live-data.html">Live Data</a></li>
   </ul>
 </div>
 
