--- a/services.html
+++ b/services.html
@@ -103,15 +103,19 @@
   </style>
 </head>
 <body>
-  <div id="navbar"></div>
-<script>
+  <script>
 fetch('/navbar.html')
   .then(res => res.text())
   .then(data => {
     document.getElementById('navbar').innerHTML = data;
+
+    // Now attach click
+    document.getElementById("menuBtn").onclick = function() {
+      var nav = document.getElementById("navLinks");
+      nav.style.display = (nav.style.display === "block") ? "none" : "block";
+    };
   });
 </script>
-
 
   <div class="container">
 
