--- a/client-report.html
+++ b/client-report.html
@@ -16,6 +16,20 @@ iframe { width:100%; height:400px; border:1px solid #ccc; }
 </head>
 
 <body>
+  <script>
+fetch('/navbar.html')
+  .then(res => res.text())
+  .then(data => {
+    document.getElementById('navbar').innerHTML = data;
+
+    // Now attach click
+    document.getElementById("menuBtn").onclick = function() {
+      var nav = document.getElementById("navLinks");
+      nav.style.display = (nav.style.display === "block") ? "none" : "block";
+    };
+  });
+</script>
+
 
 <div class="box">
 <h2>🔐 Client Report Login</h2>
