--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@ window.onload = function() {
 
 </div>
 </body>
+  <div id="navbar"></div>
   <script>
 fetch('/navbar.html')
   .then(res => res.text())
