--- a/contact.html
+++ b/contact.html
@@ -86,6 +86,7 @@ button:hover {
 </style>
 </head>
 <body>
+  <div id="navbar"></div>
   <script>
 fetch('/navbar.html')
   .then(res => res.text())
