--- a/client-report.html
+++ b/client-report.html
@@ -16,6 +16,7 @@ iframe { width:100%; height:400px; border:1px solid #ccc; }
 </head>
 
 <body>
+  <div id="navbar"></div>
   <script>
 fetch('/navbar.html')
   .then(res => res.text())
