--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       background: #f4f6f8;
     }
     <style>
+
 /* HERO BACKGROUND */
 .hero {
   height: 300px;
-  background: url('/bg.jpg') no-repeat center center;
+  background: url('/bg.png') no-repeat center center;
   background-size: cover;
   display: flex;
   align-items: center;
@@ -49,6 +50,13 @@
   <h1>Dhayareshwar Labs</h1>
   <p>Environmental Monitoring Solutions</p>
 </div>
+  <style>
+body {
+  margin: 0;
+  background: url('/bg.jpg') no-repeat center center fixed;
+  background-size: cover;
+}
+</style>
 
 .navbar {
   position: fixed;
