--- a/index.html
+++ b/index.html
@@ -17,47 +17,7 @@
     }
     <style>
 
-/* HERO BACKGROUND */
-.hero {
-  height: 300px;
-  background: url('/bg.png') no-repeat center center;
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  color: white;
-  text-align: center;
-}
-
-/* OPTIONAL DARK OVERLAY */
-.hero::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 300px;
-  background: rgba(0,0,0,0.4);
-}
-
-.hero * {
-  position: relative;
-  z-index: 1;
-}
-</style>
-
     /* ===== NAVBAR ===== */
-  <div class="hero">
-  <h1>Dhayareshwar Labs</h1>
-  <p>Environmental Monitoring Solutions</p>
-</div>
-  <style>
-body {
-  margin: 0;
-  background: url('/bg.jpg') no-repeat center center fixed;
-  background-size: cover;
-}
-</style>
-
 .navbar {
   position: fixed;
   top: 0;
@@ -122,6 +82,34 @@ body {
 .logo img{
   max-width:150px;
 }
+    <style>
+/* HERO BACKGROUND */
+.hero {
+  height: 300px;
+  background: url('/bg.jpg') no-repeat center center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
+  text-align: center;
+}
+
+/* OPTIONAL DARK OVERLAY */
+.hero::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 300px;
+  background: rgba(0,0,0,0.4);
+}
+
+.hero * {
+  position: relative;
+  z-index: 1;
+}
+</style>
 
 /* PRODUCTS */
 .products{
