--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  color: white;
+  color: green;
   text-align: center;
 }
 
@@ -345,6 +345,7 @@ Contact on WhatsApp
 
 <footer>
 <footer style="
+width:100%;
 background:#222;
 color:#fff;
 text-align:center;
