--- a/index.html
+++ b/index.html
@@ -8,169 +8,21 @@
   <meta name="keywords" content="AQMS, BRSR, EPR, ESG, AQI Monitoring System, GHG, LED AQI Display, ETP/STP, MPCB CPCB">
 
   <style>
-    /* ALL CSS ONLY HERE */
-
-    body {
+      body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f4f6f8;
+      padding:0;
+      min-height:100vh;
+      background:url("bg.png") no-repeat center center fixed;
+      background-size: cover;
     }
-    <style>
+   </style>
+   </head>
 
-    /* ===== NAVBAR ===== */
-.navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: #2c3e50;
-  padding: 12px 0;
-  z-index: 1000;
-}
+   <body>
 
-body {
-  margin-top: 60px;
-}
-
-
-.navbar ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;              /* IMPORTANT */
-  justify-content: center;    /* horizontal */
-  gap: 25px;
-}
-
-.navbar ul li {
-  display: inline-block;
-}
-
-.navbar ul li a {
-  color: #ffffff;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.navbar ul li a:hover {
-  text-decoration: underline;
-}
-
-/* Mobile view */
-@media (max-width: 600px) {
-  .navbar ul {
-    flex-direction: row;   /* STILL horizontal */
-    flex-wrap: wrap;
-    gap: 15px;
-  }
-}
-
-/* CONTAINER */
-.container{
-  max-width:1000px;
-  margin:20px auto;
-  background:#fff;
-  padding:20px;
-  border-radius:8px;
-  box-shadow:0 0 10px rgba(0,0,0,0.08);
-}
-
-.logo{
-  text-align:center;
-}
-.logo img{
-  max-width:150px;
-}
-/* HERO BACKGROUND */
-.hero {
-  height: 300px;
-  background: url('/bg.jpg') no-repeat center center;
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  color: green;
-  text-align: center;
-}
-
-/* OPTIONAL DARK OVERLAY */
-.hero::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 300px;
-  background: rgba(0,0,0,0.4);
-}
-
-.hero * {
-  position: relative;
-  z-index: 1;
-}
-
-/* PRODUCTS */
-.products{
-  margin-top:30px;
-}
-.product-grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:20px;
-}
-.product-card{
-  border:1px solid #ddd;
-  padding:15px;
-  border-radius:6px;
-  text-align:center;
-}
-.product-card img{
-  width:100%;
-  max-height:140px;
-  object-fit:contain;
-}
-.price{
-  color:green;
-  font-weight:bold;
-  margin-top:8px;
-}
-
-/* BUTTON */
-.whatsapp{
-  text-align:center;
-  margin-top:30px;
-}
-.whatsapp a{
-  background:#25d366;
-  color:#fff;
-  padding:12px 22px;
-  border-radius:6px;
-  text-decoration:none;
-  font-weight:bold;
-}
-
-/* FOOTER */
-footer{
-  text-align:center;
-  margin-top:30px;
-  color:#777;
-  font-size:14px;
-}
-
-/* MOBILE */
-@media(max-width:600px){
-  .navbar ul{
-    flex-wrap:wrap;
-  }
-}
-</style>
-</head>
-
-<body>
-
-<!-- NAVIGATION -->
-<div class="navbar">
-  <ul>
+   <!-- NAVIGATION -->
+   <div class="navbar">
+   <ul>
     <li><a href="/index.html">Home</a></li>
     <li><a href="/products.html">Products</a></li>
     <li><a href="/services.html">Services</a></li>
@@ -178,7 +30,7 @@ footer{
     <li><a href="/client-report.html">Client Login</a></li>
     <li></li><a href="/live-data.html">Live Data</a></li>
   </ul>
-</div>
+ </div>
 
 <div class="container">
 
