--- a/index.html
+++ b/index.html
@@ -8,17 +8,111 @@
   <meta name="keywords" content="AQMS, BRSR, EPR, ESG, AQI Monitoring System, GHG, LED AQI Display, ETP/STP, MPCB CPCB">
 
   <style>
-      body {
+    /* RESET */
+    * {
       margin: 0;
-      padding:0;
-      min-height:100vh;
-      background:url("bg.png") no-repeat center center fixed;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    /* FULL SCREEN BACKGROUND */
+    body {
+      min-height: 100vh;
+      font-family: Arial, sans-serif;
+      background: 
+        linear-gradient(rgba(255,255,255,0.85), rgba(255,255,255,0.85)),
+        url("bg.jpg") no-repeat center center fixed;
       background-size: cover;
     }
-   </style>
-   </head>
 
-   <body>
+    /* MAIN CONTENT BOX */
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    .logo {
+      width: 120px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      margin-bottom: 10px;
+    }
+
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .card {
+      background: white;
+      padding: 15px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+
+    .card img {
+      width: 100%;
+      border-radius: 8px;
+    }
+
+    .menu-btn {
+      margin-top: 30px;
+      padding: 12px 25px;
+      background: #2c7be5;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="container">
+    <img src="logo.png" class="logo" alt="Logo">
+    <h1>Dhayareshwar Labs</h1>
+    <p>Environmental Monitoring • AQI • OCEMS • BRSR • GHG</p>
+
+    <div class="products">
+      <div class="card">
+        <img src="aqi.jpg">
+        <h3>AQI Monitoring</h3>
+        <p>Real-time PM2.5 & PM10</p>
+      </div>
+
+      <div class="card">
+        <img src="ocems.jpg">
+        <h3>OCEMS</h3>
+        <p>Emission Monitoring</p>
+      </div>
+
+      <div class="card">
+        <img src="led.jpg">
+        <h3>LED AQI Display</h3>
+        <p>Outdoor Display</p>
+      </div>
+
+      <div class="card">
+        <img src="water.jpg">
+        <h3>Water OCEMS</h3>
+        <p>Effluent Monitoring</p>
+      </div>
+    </div>
+
+    <button class="menu-btn">Menu</button>
+  </div>
+
+</body>
+</html>
+
 
    <!-- NAVIGATION -->
    <div class="navbar">
