--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   display:flex;
   justify-content:space-between;
   align-items:center;
-  background:#0a3d62;
+  background:#198754;
   padding:10px 15px;
 }
 
@@ -68,10 +68,6 @@
  </div>
 
 <div class="container">
-
-<!-- LOGO -->
-<div class="logo">
-  <img src="Logo.jpg" alt="Dhayareshwar Labs">
 </div>
 
 <h1 style="text-align:center;">Dhayareshwar Labs</h1>
