--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 }
 
 .navbar .logo{
-  color:white;
+  color:black;
   font-weight:bold;
   font-size:18px;
 }
@@ -34,7 +34,7 @@
 }
 
 .navbar ul li a{
-  color:white;
+  color:black;
   text-decoration:none;
   font-size:14px;
 }
