--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   <meta name="keywords" content="AQMS, BRSR, EPR, ESG, AQI Monitoring System, GHG, LED AQI Display, ETP/STP, MPCB CPCB">
 
   <style>
-    /.navbar{
+  /.navbar{
   display:flex;
   justify-content:space-between;
   align-items:center;
   background:#198754;
   padding:10px 15px;
+}
+    .navbar{
+  background:linear-gradient(90deg,#0a7d5a,#0a3d62);
 }
 
 .navbar .logo{
