--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
     margin:5px 10px;
   }
 }
+.product-card img{
+  width:100%;
+  height:180px;        /* LIMIT HEIGHT */
+  object-fit:cover;   /* CROP nicely */
+  border-radius:8px;
+}
 
 </style>
 
