--- a/index.html
+++ b/index.html
@@ -12,13 +12,25 @@
   display:flex;
   justify-content:space-between;
   align-items:center;
-  padding:16px 24px;
+  padding:14px 20px;
   background:linear-gradient(90deg,#0a7d5a,#0a3d62);
+  position:sticky;
+  top:0;
+  z-index:1000;
 }
+
 .navbar .logo{
   color:white;
-  font-weight:bold;
+  font-weight:700;
   font-size:18px;
+}
+
+.navbar ul{
+  list-style:none;     /* REMOVES BULLETS */
+  display:flex;       /* HORIZONTAL */
+  gap:15px;
+  margin:0;
+  padding:0;
 }
 
 .navbar ul li a{
@@ -26,7 +38,11 @@
   text-decoration:none;
   font-size:14px;
 }
-    
+
+.navbar ul li a:hover{
+  text-decoration:underline;
+}
+
 /* Mobile */
 @media(max-width:600px){
   .navbar{
