--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <meta name="keywords" content="AQMS, BRSR, EPR, ESG, AQI Monitoring System, GHG, LED AQI Display, ETP/STP, MPCB CPCB">
 
   <style>
+    .header-img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+    }
+  </style>
+</head>
+  <div class="header">
+  <img src="cloud.gif" class="header-img">
+</div>
+  <body>
+  
+    <style>
+    
     .navbar{
   display:flex;
   justify-content:space-between;
