--- a/index.html
+++ b/index.html
@@ -6,31 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Dhayareshwar Labs – AQMS, BRSR, EPR, AQI Monitoring Systems, OCEMS, GHG And ESG solutions as per CPCB, SEBI & MPCB norms.">
   <meta name="keywords" content="AQMS, BRSR, EPR, ESG, AQI Monitoring System, GHG, LED AQI Display, ETP/STP, MPCB CPCB">
-
-  <style>
-    .header-img {
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-    }
-  </style>
-</head>
-  <div class="header">
-  <img src="cloud.gif" class="header-img">
-</div>
-  <body>
   
-    <style>
-    
-    .navbar{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:14px 20px;
-  background:linear-gradient(90deg,#0a7d5a,#0a3d62);
-  position:sticky;
-  top:0;
-  z-index:1000;
+  <style>
+  .navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 14px 20px;
+  background: linear-gradient(90deg, #0a7d5a, #003366);
 }
 
 .navbar .logo{
@@ -91,8 +79,16 @@
   max-width:95%;
   max-height:95%;
 }
-
-</style>
+    .header-img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+    }
+  </style>
+</div>
+<div class="header">
+  <img src="https://media.giphy.com/media/l0HlNQ03J5JxX6lva/giphy.gif" class="header-img">
+</div>
 
    <!-- NAVIGATION -->
    <div class="navbar">
