--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <li><a href="/index.html">Home</a></li>
     <li><a href="/products.html">Products</a></li>
     <li><a href="/services.html">Services</a></li>
+    <li><a href="/esg.html">ESG-Services</a></li>
     <li><a href="/contact.html">Contact</a></li>
     <li><a href="/client-report.html">Client Login</a></li>
     <li></li><a href="/live-data.html">Live Data</a></li>
