--- a/esg.html
+++ b/esg.html
@@ -7,18 +7,18 @@
   <meta name="description" content="Professional ESG Services including BRSR, GRI, Carbon Footprint, Environmental Monitoring, ESG Reporting and Assurance.">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f4f6f8;
-      color: #333;
-      line-height: 1.6;
-    }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  background: url("https://media.giphy.com/media/26AHONQ79FdWZhAI0/giphy.gif") center center / cover no-repeat fixed;
+  color: #333;
+  line-height: 1.6;
+  }
+
     header {
-      background: linear-gradient(120deg, #0a7d5a, #1fbf8f);
-      color: white;
-      padding: 40px 20px;
-      text-align: center;
-    }
+  background: url("https://media.giphy.com/media/26AHONQ79FdWZhAI0/giphy.gif") center center / cover no-repeat;
+  color: white;
+}
+
     section {
       max-width: 1100px;
       margin: auto;
