--- a/esg.html
+++ b/esg.html
@@ -15,7 +15,7 @@
   }
 
     header {
-  background: url("https://media.giphy.com/media/tQgB6lM6XCle8/giphy.gif") center center / cover no-repeat fixed;
+  background:#f4f6f8;
   color: white;
 }
 
