--- a/esg.html
+++ b/esg.html
@@ -9,14 +9,14 @@
     body {
   font-family: Arial, sans-serif;
   margin: 0;
-  background: url("https://media.giphy.com/media/tQgB6lM6XCle8/giphy.gif") center center / cover no-repeat fixed;
+  background: url("<img src="https://media.giphy.com/media/jah1fkFHo0dUF1hYPQ/giphy.gif") center center / cover no-repeat fixed;
   color: #333;
   line-height: 1.6;
   }
 
     header {
   background:#f4f6f8;
-  color: green;
+  color: white;
 }
 
     section {
