--- a/esg.html
+++ b/esg.html
@@ -9,7 +9,7 @@
     body {
   font-family: Arial, sans-serif;
   margin: 0;
-  background: url("<img src="https://media.giphy.com/media/jah1fkFHo0dUF1hYPQ/giphy.gif") center center / cover no-repeat fixed;
+  background: url("https://media.giphy.com/media/jah1fkFHo0dUF1hYPQ/giphy.gif" width="100%") center center / cover no-repeat fixed;
   color: #333;
   line-height: 1.6;
   }
