--- a/products.html
+++ b/products.html
@@ -138,6 +138,26 @@ fetch('/navbar.html')
   <p>Online effluent quality monitoring system.</p>
   <div class="price">on request</div>
 </div>
+  
+  <div class="product-card">
+  <img src="etp_stp.png">
+  <h3>ETP STP Maintenance and Operation</h3>
+  <p>Water Treatment systems.</p>
+  <div class="price">on request</div>
+  </div>
+<div class="product-card">
+  <img src="soil.png">
+  <h3>Soil Testing Services</h3>
+  <p>Know your soil Health Testing Services.</p>
+  <div class="price">on request</div>
+</div>
+<div class="product-card">
+  <img src="driwater.png">
+  <h3>Drinking Water</h3>
+  <p>Water Testing for Potable Testing, Food License purpose Drinking Water.</p>
+  <div class="price">on request</div>
+</div>
+  
 <div class="back">
       <a href="index.html">← Back to Home</a>
 </div>
