--- a/products.html
+++ b/products.html
@@ -150,13 +150,13 @@ fetch('/navbar.html')
   <h3>Soil Testing Services</h3>
   <p>Know your soil Health Testing Services.</p>
   <div class="price">on request</div>
-</div>
+ </div>
 <div class="product-card">
   <img src="driwater.png">
   <h3>Drinking Water</h3>
-  <p>Water Testing for Potable Testing, Food License purpose Drinking Water.</p>
+  <p>Water Testing for Potable Drinking Water.</p>
   <div class="price">on request</div>
-</div>
+ </div>
   
 <div class="back">
       <a href="index.html">← Back to Home</a>
