--- a/live-data.html
+++ b/live-data.html
@@ -173,9 +173,15 @@ loadData();
 
     <!-- Card 4 -->
     <div class="sponsor-card">
-      <img src="logo.jpg">
-      <strong>Environmental Services</strong><br>
-      <small>Compliance & Monitoring</small>
+      <img src="etp_stp.png">
+      <strong>ETP STP Maintenance Services</strong><br>
+      <small>Treatment Plant Repair</small>
+    </div>
+    <!-- Card 5 -->
+    <div class="sponsor-card">
+      <img src="soil.png">
+      <strong>Soil Testing Services</strong><br>
+      <small>Agriculture Soil Testing characteristics</small>
     </div>
 
     <!-- DUPLICATE FOR SMOOTH LOOP -->
